<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="eBetriebszustand" Id="{aea1b32f-fa93-4aff-a081-8549f6ca8dfa}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eBetriebszustand :
(
	off, //nicht Betriebsbereit 
	error, //Fehlerbehafteter Stop(Sicherheitssteuerung)
	setup, //Wartung 
	warning, // Nicht fehlerbehafteter geplanter Stop 
	init, //Herstellung Betriebsbereitschaft 
	ready, //betriebsbereit 
	production, //Im Betrieb
	done, //Betrieb abgschlossen
	stop //geplanter Stillstand 
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>